--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "mini-svg-data-uri": "^1.4.4",
+    "motion": "^11.15.0",
     "next": "15.1.3",
     "nodemailer": "^6.9.16",
     "react": "^19.0.0",
